<?xml version="1.0"?>
<package format="2">
  <name>calib_odom</name>
  <version>0.0.0</version>
  <description>The calib_odom package</description>
  <maintainer email="rjjjjjp1997@163.com">rjp</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>message_filters</depend>

</package>
