<?xml version="1.0"?>
<package format="2">
  <name>calib_odom_tf</name>
  <version>0.0.0</version>
  <description>The calib_odom_tf package</description>

  <maintainer email="rjjjjjp1997@163.com">rjp</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>tf2_msgs</depend>
  <depend>message_filters</depend>

</package>
